[package]
name = "smc-program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.7"
anchor-lang = "0.7.0"
borsh = "0.7.1"
borsh-derive = "0.8.1"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.6.7"

[lib]
name = "smc"
crate-type = ["cdylib", "lib"]

[workspace]
members = [
  "./"
]